--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: gameFontBold;
+    src: url("./../../player1upbold.ttf");
+}
+
 body{
     font-family: "gameFontBold";
 }
@@ -21,6 +26,7 @@ body{
     float: left;
     
 }
+
 .gridCell:hover{
     background-color:#ed3df9;
 
